--- a/style.css
+++ b/style.css
@@ -19,6 +19,29 @@ a:hover {
 
 blockquote {
     font-style: italic;
+    color: rgb(14, 13, 13);
+}
+
+figcaption {
+    color: rgb(14, 13, 13);
+}
+
+address {
+    padding-left: 5px;
+}
+
+#partners {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+#partners li {
+    margin-left: 15px;
+}
+
+#bloc-6 {
+    background-color: #6A2200;
 }
 
 #bloc-8 {
@@ -527,7 +550,6 @@ button {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    opacity: 0;
     z-index: 500;
     transition: all .3s ease-in-out;
 }
@@ -751,7 +773,7 @@ h4 {
 }
 
 .portfolio-thumb {
-    margin-bottom: 24px;
+    margin: 0 auto 24px auto;
 }
 
 .portfolio-row {
@@ -773,12 +795,16 @@ h4 {
     text-decoration: underline!important;
 }
 
+.bold-link:hover {
+    border: 1px solid #FFFFFF;
+}
+
 .bgc-white {
     background-color: #FFFFFF;
 }
 
 .bgc-dark-slate-blue {
-    background-color: #364577;
+    background-color: #2F3D6A;
 }
 
 .bgc-atomic-tangerine {
@@ -830,11 +856,11 @@ h4 {
 }
 
 .bg-banniere {
-    background-image: url("img/la-chouette-agence-banniere.jpg");
+    background-image: url("img/la-chouette-agence-banniere.webp");
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation.webp");
 }
 
 @media (max-width: 1024px) {
